Removed special case for BSD operating systems since it broke NetBSD
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@25996 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,5 @@
+2008-01-22 Riccardo Mottola <rmottola@users.sourceforge.net>
 
-
+	* GWorkspace/FileViewer/GWViewer.m,
+	GWorkspace/FileViewer/GWSpatialViewer.m:
+	Removed special case for BSD operating systems since it broke NetBSD
