start fswatcher with --daemon --auto
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26590 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-01-22 Riccardo Mottola <rmottola@users.sourceforge.net>
 
+	* GWorkspace/GWorkspace.m,
+	GWMetadata/gmds/mdextractor/updater.m:
+	start fswatcher with --daemon --auto
+	
+	* Tools/fswatcher/fswatcher.m:
+	shut down when the last connection closes
+
+
+2008-01-22 Riccardo Mottola <rmottola@users.sourceforge.net>
+
 	* GWorkspace/FileViewer/GWViewer.m,
 	GWorkspace/FileViewer/GWSpatialViewer.m:
 	Removed special case for BSD operating systems since it broke NetBSD
