use standard info panel
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26637 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
-2008-01-22 Riccardo Mottola <rmottola@users.sourceforge.net>
+2008-06-11 Riccardo Mottola <rmottola@users.sourceforge.net>
+
+	* GWorkspace/GWorkspace.m:
+	use standard info panel
+	* GWorkspace/GWorkspaceInfo.plist:
+	corrected version
+	* configure:
+	define package name and version
+
+2008-06-07 Riccardo Mottola <rmottola@users.sourceforge.net>
 
 	* GWorkspace/GWorkspace.m,
 	GWMetadata/gmds/mdextractor/updater.m:
