updated configure and make system
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26700 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-06-24 Riccardo Mottola <rmottola@users.sourceforge.net>
+
+	* TODO:added notes
+	* configure/configure.ac: all were updated and regenerated
+	* GNUmakefile/GNUmakefile.in: most makefiles were renamed to .in to
+	comply with configure requirements  
+
+
 2008-06-15 Riccardo Mottola <rmottola@users.sourceforge.net>
 
 	* GWorkspace/FSNote/ExtendedInfo/GNUstep.h: deleted
