fixed missing brace
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26713 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-07 Riccardo Mottola <rmottola@users.sourceforge.net>
+
+	* GWMetadata/gmds/mdextractor/updater.m: fixed missing bracket
+
 2008-06-24 Riccardo Mottola <rmottola@users.sourceforge.net>
 
 	* TODO:added notes
