updated and regenerated configure
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26717 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-27 Riccardo Mottola <rmottola@users.sourceforge.net>
+
+	* configure/configure.ac: updated and regenerated
+
 2008-06-26 Riccardo Mottola <rmottola@users.sourceforge.net>
 
 	* GWMetadata/gmds/mdextractor/updater.m: fixed missing bracket
