--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-06-30 Nicola Pero <nicola.pero@meta-innovation.com>
+
+	* Tools/thumbnailer/GNUmakefile.in: Do not include bundle.make
+	since there is no bundle to build.  Including bundle.make with no
+	bundle defined caused 'rm -rf' to be executed with no argument
+	during make clean by gnustep-make v2.0.6.  Riccardo reported that
+	on his system 'rm -rf' with no arguments produces an error,
+	aborting 'make clean'.  Hmmm.
+	
 2008-06-27 Riccardo Mottola <rmottola@users.sourceforge.net>
 
 	* configure/configure.ac: updated and regenerated
