always convert to RGB color
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26850 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-16 Riccardo Mottola <rmottola@users.sourceforge.net>
+
+	* GWorkspace/Preferences/DesktopPref.m: always convert to RGB color
+	
 2008-06-30 Nicola Pero <nicola.pero@meta-innovation.com>
 
 	* Tools/thumbnailer/GNUmakefile.in: Do not include bundle.make
