Clean up configure process a bit
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@27248 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-12-07 Richard Frith-Macdonald <rfm@gnu.org>
 
+	Change order of configure for subsirectories so that people without
+	sqlite can build more easily.  Remove makefiles which are generated
+	by configure.
+
+2008-12-07 Richard Frith-Macdonald <rfm@gnu.org>
+
 	* DBKit/GNUmakefile.in:
 	* FSNode/FSNodeRep.m:
 	* FSNode/GNUmakefile.in:
