--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2008-12-19  Nicola Pero <nicola.pero@meta-innovation.com>
+
+	* All GNUmakefiles: removed GNUSTEP_CORE_SOFTWARE=YES and
+	added PACKAGE_NAME=gworkspace.
+	* GNUmakefile: Export PACKAGE_NAME to reduce chances of a problem
+	if a GNUmakefile in a subdirectory is missing it.
+
+	* DBKit/Testing/GNUmakefile: Do not set
+	GNUSTEP_INSTALLATION_DOMAIN or RPM_DISABLE_RELOCATABLE.
+	* GWMetadata/MDFinder/GNUmakefile: Same changes.
+	* GWMetadata/Preferences/GNUmakefile: Same changes.
+	* GWorkspace/Desktop/XBundles/GNUmakefile: Same changes.
+	* GWorkspace/Desktop/XBundles/XDesktopWindow/GNUmakefile: Same changes.
+	
 2008-12-18  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* All GNUmakefiles: added GNUSTEP_CORE_SOFTWARE=YES at the
