fix problems with the info plist, as suggested by Philippe Roussel
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@28740 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-09-26 Riccardo Mottola <rmottola@users.sf.net>
+
+	* GWMetadata/Preferences:
+	renamed Info.plist to MDIndexingInfo.plist
+	* GWMetadata/Preferences/GNUmakefile:
+	Do not package Info.plist explicitely
+
 2009-02-01  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* GWMetadata/Preferences/Info.plist:
