--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-09-27 Riccardo Mottola <rmottola@users.sf.net>
+	* Inspector/GNUmakefile.in:
+	install ContentViewersProtocol.h
+
 2009-09-26 Riccardo Mottola <rmottola@users.sf.net>
 
 	* GWMetadata/Preferences:
