Fix stack smash, reported by Tim Kack
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@28963 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-06 Riccardo Mottola	
+	* GWMetadata/gmds/mdextractor/Extractors/HtmlExtractor/HtmlExtractor.m:
+	Fix stack smash, reported by Tim Kack
+
 2009-09-27 Riccardo Mottola <rmottola@users.sf.net>
 	* Inspector/GNUmakefile.in:
 	install ContentViewersProtocol.h
