Fix problems with Undefined GW_DEBUG_LOG
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@28965 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2009-11-06 Riccardo Mottola	
+	* Tools\searchtool\searchtool.m,
+	Tools\lsfupdater\lsfupdater.m:
+	Fix problems with undefined GW_DEBUG_LOG
+
+2009-11-06 Riccardo Mottola	
 	* GWMetadata/gmds/mdextractor/Extractors/HtmlExtractor/HtmlExtractor.m:
 	Fix stack smash, reported by Tim Kack
 
