--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-11-14 Riccardo Mottola <rmottola@users.sf.net>
+	* GWorkspace/Preferences/XTermPref.m:
+	Reformatted and indented code
+	* GWorkspace/Resources/English.lproj/XTermPref.gorm
+	changed grouping of the Set button
+
 2009-11-12 19:48-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* GWorkspace/Dialogs/CompletionField.m: Override initWithCoder:
