--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-12-08 Riccardo Mottola <rmottola@users.sf.net>
+	* GWorkspace/FileViewer/GWViewerWindow.[h,m]:
+	removed local copy of delegate
+
 2009-11-14 Riccardo Mottola <rmottola@users.sf.net>
 	* GWorkspace/Preferences/XTermPref.m:
 	Reformatted and indented code
