do not include <GNUstepBase/NSTask+GS.h>
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@30173 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2010-03-16 Riccardo mottola <rmottola@users.sf.net>
+
+	* Tools/searchtool/searchtool.m
+	* Tools/lsfupdater/lsfupdater.m
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/Finder/SearchResults/SearchResults.m
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
+	* Recycler/Recycler.m:
+	do not include <GNUstepBase/NSTask+GS.h>
+
 2010-03-27  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* GWorkspace/FileViewer/GWViewer.m (-windowWillClose:):
