--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
-2010-03-16 Riccardo mottola <rmottola@users.sf.net>
+2010-06-11 Riccardo Mottola <rmottola@users.sf.net>
+	
+	* configure.ac
+	* configure
+	* GNUmakefile.in
+	Introduced option to disable gwmetadata build and really build it
+	if it is selected.
+	
+2010-03-16 Riccardo Mottola <rmottola@users.sf.net>
 
 	* Tools/searchtool/searchtool.m
 	* Tools/lsfupdater/lsfupdater.m
