--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
 2010-06-11 Riccardo Mottola <rmottola@users.sf.net>
+
+	* DBKit/DBKFreeNodesPage.m
+	* GWorkspace/Dialogs/CompletionField.m
+	* GWorkspace/GWFunctions.m
+	* GWorkspace/Finder/LiveSearch/LSFolder.m
+	* GWorkspace/Finder/SearchResults/SearchResults.m
+	* GWorkspace/Desktop/GWDesktopView.m
+	* FSNode/FSNPathComponentsViewer.m:
+	Warning fixes
+	
+2010-06-11 Riccardo Mottola <rmottola@users.sf.net>
 	
 	* configure.ac
 	* configure
