--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2010-06-14 Riccardo Mottola <rmottola@users.sf.net>
+
+	* DBKit/DBKBTreeNode.[h,m]: change unload signature to BOOL to avoid
+	conflicting with NSBundle
+
+	* Tools/fswatcher/fswatcher.h
+	* GWorkspace/FileViewer/GWViewerPathsPopUp.m
+	* GWorkspace/Fiend/FiendLeaf.m:
+	Warning fixes.
+
 2010-06-11 Riccardo Mottola <rmottola@users.sf.net>
 
 	* DBKit/DBKFreeNodesPage.m
