--- a/ChangeLog
+++ b/ChangeLog
@@ -5,8 +5,9 @@
 
 	* Tools/fswatcher/fswatcher.h
 	* GWorkspace/FileViewer/GWViewerPathsPopUp.m
-	* GWorkspace/Fiend/FiendLeaf.m:
+	* GWorkspace/Fiend/FiendLeaf.m
 	* GWorkspace/WorkspaceApplication.m
+	* GWorkspace/TShelf/TShelfView.m:
 	Warning fixes.
 
 2010-06-11 Riccardo Mottola <rmottola@users.sf.net>
