Warn about OPEN_MAX being undefined but do not override it by default.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@30712 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -64,6 +64,11 @@
 	* FSNode/FSNode.m:
 	Cleaned up imports to use system GNUstep.h
 
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/FileViewer/GWViewer.m
+	* GWorkspace/FileViewer/GWSpatialViewer.m
+	* GWorkspace/FileViewer/GWViewersManager.m
+	Warn about OPEN_MAX being undefined but do not override it by default.
 
 2010-06-11 Riccardo Mottola <rmottola@users.sf.net>
 
